recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:2: error: not found: value list
	if(n==list.size)
              ^