recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
	if(n==list.size)
		return Nil
	else
		return nlast(l.tail, n-1)
}
